initial commit moving with java 17