@@ -346,7 +346,7 @@ public class StoreFacadeImpl implements StoreFacade {
 		configTO.setKey(config.getKey());
 		configTO.setMerchantConfigurationType(configurationType);
 		configTO.setValue(config.getValue());
-		configTO.setActive(new Boolean(config.isActive()));
+		configTO.setActive(Boolean.valueOf(config.isActive()));
 		return configTO;
 	}
 
